--- a/style.css
+++ b/style.css
@@ -158,8 +158,8 @@ section .title::after{
     color: white;
   }
   
-  .fa-linkedin {
-    background: #007bb5;
+  .fa-whatsapp {
+    background: green;
     color: white;
   }
   
